kubernetes/tautulli/tautulli-publish.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.1.0 (36652f6)
  creationTimestamp: null
  labels:
    io.kompose.service: tautulli
  name: tautulli
spec:
  selector:
    matchLabels:
      io.kompose.service: tautulli
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: tautulli
    spec:
      containers:
      - env:
        - name: PGID
          value: "1000"
        - name: PUID
          value: "1000"
        - name: VIRTUAL_HOST
          value: tautulli.perkplex.geekgalaxy.com
        - name: VIRTUAL_PORT
          value: "8181"
        image: linuxserver/tautulli:latest
        name: tautulli
        ports:
        - containerPort: 8181
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: tautulli-volume
      restartPolicy: Always
      volumes:
      - name: tautulli-volume
        persistentVolumeClaim:
          claimName: tautulli-volume-claim
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.1.0 (36652f6)
  creationTimestamp: null
  labels:
    io.kompose.service: tautulli
  name: tautulli
spec:
  type: NodePort
  ports:
  - name: "8181"
    port: 8181
    targetPort: 8181
  selector:
    io.kompose.service: tautulli
