kubernetes/tautulli/external-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tautulli-external
  namespace: default
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: tautulli.ext.perkplex.geekgalaxy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tautulli
          servicePort: 8181
